Closed Bug 1658927 Opened 5 years ago Closed 5 years ago

IME popup is incorrectly positioned with desktop APZ zooming

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(1 file)

Reproduced on macOS using these STR:

  • Go to macOS system settings -> Keyboard -> Input Sources tab, and add Japanese using the "+" button under the left pane. I didn't change any of the defaults that show up in the right pane, but make sure the "Show input menu in menu bar" option is checked.
  • Go to a page with an input field, e.g. https://staktrace.com/kats/contact.php and zoom in using a pinch gesture on the macOS trackpad
  • Put focus in the input field
  • Use the input switcher in the macOS menu bar to switch to "Hiragana"
  • Type the letter "a"
  • Observe the location of the IME popup that shows up

Expected:

  • Is near the cursor

Actual:

  • Is floating some distance away. Exact position depends on how much you've zoomed and such
Assignee: nobody → kats

Applying the layout-to-visual transform to these rects seems to fix the problem.

Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d317649ec5da Apply the layout-to-visual transform for querying the text rects too. r=masayuki
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: