Bug 1658927 - Apply the layout-to-visual transform for querying the text rects too. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D86984